--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="İlke Eren'in harika sitesi"
+      content="The website that you can learn things about me, view my projects and contact me."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>İlke Eren'in Portfolyosu</title>
+    <title>İlke Eren's Portfolio Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
